# morsesrc

./: LICENSE  README.md  meson.build
src/: gstmorsesrc.c  meson.build
